Changed css for select day and fixed display error on mobile devices

--- a/src/main/resources/static/css/datepicker.css
+++ b/src/main/resources/static/css/datepicker.css
@@ -1,15 +1,16 @@
+/*Common style*/
 .ui-datepicker {
 	background: #ffffff;
 	font-family: "Helvetica", "Arial", "sans-serif";
 	font-weight: bold;
 }
-
+/*Head style*/
 .ui-widget-header {
 	border: #ffffff;
 	background: #ffffff;
 	color: #ffffff;
 }
-
+/*Selectbox style */
 .ui-datepicker select.ui-datepicker-month, .ui-datepicker select.ui-datepicker-year
 	{
 	color: #1a1a1a;
@@ -17,8 +18,14 @@
 	border: #ffffff;
 	background: #ffffff;
 }
-
+/*Corrent day*/
 .ui-datepicker-calendar td.ui-datepicker-today a {
 	background: #0073ea;
 	color: #ffffff;
 }
+/* Selected day */
+.ui-widget-content .ui-state-active {
+	background: #0073ea;
+    color: #ffffff;
+}
+
